--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
-    <string name="app_name">FitLivin</string>
-    <string name="title_activity_main">MainActivity</string>
-
+    <string name="app_name">FitLivinApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main2">Main2Activity</string>
 </resources>
