--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title_activity_nutrition_cal">NutritionCal</string>
     <string name="title_activity_track_progress">TrackProgress</string>
     <string name="title_activity_points_page">PointsPage</string>
+    <string name="title_activity_profile__page">Profile_Page</string>
+    <string name="title_activity_ft__strength__training">FT_Strength_Training</string>
+    <string name="title_activity_ft__str__training">FT_Str_Training</string>
 </resources>
