--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="title_activity_fp__str__training">FP_STR_Training</string>
     <string name="title_activity_fp__body__building">FP_Body_Building</string>
     <string name="title_activity_fp__wgt__loss">FP_WGT_Loss</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
