--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="parse_application_Id">KkZRFZGjA2I8mKNyuBkqgunMsVCKiWA2YrLsR3w4</string>
+    <string name="parse_application_Key">8giIFo0DzUQVHwgsl0HkXzW12n2iGj8kU1vZd90f</string>
 </resources>
