--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,23 @@
     <string name="title_activity_fp__body__building">FP_Body_Building</string>
     <string name="title_activity_fp__wgt__loss">FP_WGT_Loss</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="parse_application_Id">KkZRFZGjA2I8mKNyuBkqgunMsVCKiWA2YrLsR3w4</string>
     <string name="parse_application_Key">8giIFo0DzUQVHwgsl0HkXzW12n2iGj8kU1vZd90f</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Log in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="error_intro">Please</string>
 </resources>
