Adding stopwatch Activity. Having issues pointing it to next page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
+    <string name="title_activity_stopwatch_activity">stopwatch_activity</string>
 
 
 </resources>
